--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -1,3 +1,7 @@
+html {
+  background-color: #e8e8e8;
+}
+
 .first-div {
   display: flex;
   justify-content: center;
@@ -94,11 +98,11 @@ td {
 }
 
 .update {
-  background-color: rgb(43, 226, 98);
+  background-color: orange;
   color: #000000;
   padding: 5px;
   border-radius: 3px;
-  border-color: rgb(6, 182, 0);
+  border-color: orange;
   margin-left: 5px;
   font-size: 1rem;
 }
