--- a/src/login.css
+++ b/src/login.css
@@ -1,13 +1,17 @@
+html {
+  background-color: #e8e8e8;
+}
+
+/* Login form */
 .outer-container {
-  height: 100vh;
+  height: 400px;
   width: 100vw;
-  /* background-color: darkcyan; */
+  background-color: #e8e8e8;
 }
 
 .login-container {
-  margin-top: 10%;
   display: flex;
-  justify-content: center;
+  justify-content: right;
   width: 100%;
   align-items: center;
 }
@@ -18,15 +22,140 @@
   font-size: 16px;
 }
 .login-div {
-  background-image: linear-gradient(
-    to right,
-    #ffce00 50%,
-    #ffce00 50%,
-    #fe4880
-  );
+  background-color: orange;
+  /* background-image: linear-gradient(
+      to right,
+      #ffce00 50%,
+      #ffce00 50%,
+      #fe4880
+    ); */
   display: flex;
   align-items: center;
 
-  padding: 7px;
-  border-radius: 7px;
+  padding: 10px;
+  border-radius: 10px;
+  margin-right: 50px;
+}
+form {
+  display: block;
+  position: relative;
+}
+.edit_profile_btn {
+  background-color: orange;
+  text-decoration: none;
+  width: 80px;
+  border-radius: 5px;
+  text-align: center;
+  height: 25px;
+  float: left;
+}
+.edit_profile_btn .EditProfile {
+  text-decoration: none;
+  color: #fff;
+  font-size: 14px;
+}
+
+.participant-logout-btn {
+  float: right;
+}
+
+form .form-inner {
+  position: relative;
+  display: block;
+  background-color: #fff;
+  border-radius: 10px;
+  border: 5px solid purple;
+  padding: 30px;
+  z-index: 2;
+  height: 350px;
+}
+
+form .form-inner h2 {
+  color: #888;
+  font-size: 28px;
+  font-weight: 500;
+}
+
+form .form-inner .form-group {
+  display: block;
+  width: 300px;
+  margin-bottom: 15px;
+}
+
+.form-inner .form-group label {
+  display: block;
+  color: #666;
+  font-size: 15px;
+  margin-bottom: 5px;
+  transition: 0.4s;
+}
+
+form .form-inner .form-group input {
+  display: block;
+  width: 90%;
+  padding: 10px 15px;
+  background-color: #f8f8f8;
+  border-radius: 8px;
+  transition: 0.4s;
+}
+
+form .form-inner .form-group input:focus {
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+}
+form .form-inner button[type="submit"] {
+  display: inline-block;
+  padding: 10px 15px;
+  border-radius: 8px;
+  background-color: orange;
+  /* background-image: linear-gradient(
+      to right,
+      #ffce00 50%,
+      #ffce00 50%,
+      #fe4880
+    ); */
+  background-size: 200%;
+  background-position: 0%;
+  transition: 0.4s;
+  color: #fff;
+  font-weight: 500;
+  cursor: pointer;
+  border: none;
+}
+
+form .form-inner button[type="submit"]:hover {
+  background-position: 100% 0%;
+  background-color: orangered;
+}
+
+form .form-inner button[type="button"] {
+  display: inline-block;
+  padding: 10px 15px;
+  border-radius: 8px;
+  background-color: orange;
+  /* background-image: linear-gradient(
+      to right,
+      #ffce00 50%,
+      #ffce00 50%,
+      #fe4880
+    ); */
+  background-size: 200%;
+  background-position: 0%;
+  transition: 0.4s;
+  color: #fff;
+  font-weight: 500;
+  cursor: pointer;
+  border: none;
+}
+
+form .form-inner button[type="button"]:hover {
+  background-position: 100% 0%;
+  background-color: orangered;
+}
+
+.login-button .login {
+  color: #fff;
+  background-color: orange;
+  border: none;
+  padding: 5px;
+  border-radius: 5px;
 }
